objects/SupplierShipToAddress__c.object
<CustomObject>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CountryLabel__c</fullName>
        <label>Country Label</label>
        <length>99</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>FinalCountries</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>DefaultAll__c</fullName>
        <defaultValue>&quot;All&quot;</defaultValue>
        <description>Field to make &apos;All&apos; searchable for Ship-to-addresses</description>
        <label>DefaultAll</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ImcdCompany__c</fullName>
        <formula>TEXT(SupplierAccount__r.IMCDCompany__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IMCD Company</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Instructions__c</fullName>
        <defaultValue>$Label.IMCD_HELP_ShipToAddress</defaultValue>
        <label>Instructions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IntegrationId__c</fullName>
        <externalId>true</externalId>
        <label>Integration Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>JdeId__c</fullName>
        <externalId>true</externalId>
        <label>JDE Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Latitude__c</fullName>
        <label>Latitude</label>
        <scale>15</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>LocalErpId__c</fullName>
        <externalId>true</externalId>
        <label>Local ERP Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Longitude__c</fullName>
        <label>Longitude</label>
        <scale>15</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>PostalCode__c</fullName>
        <label>Postal Code</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PsftId__c</fullName>
        <externalId>true</externalId>
        <label>PSFT Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SupplierAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supplier Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Supplier Ship To&apos;s</relationshipLabel>
        <relationshipName>Supplier_Ship_To_s</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Supplier Ship To Address</label>
    <nameField>
        <label>Supplier Ship To Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Supplier Ship To&apos;s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>